feat: Add root-based HFP connection and Magisk module support
- Add executeRootCommand() with stdin method for Magisk/KernelSU compatibility
- Add setupRootPermissions() to auto-grant MODIFY_PHONE_STATE, BLUETOOTH_PRIVILEGED
- Add connectHfpWithRoot() with multi-strategy approach (BluetoothHeadset.connect, cmd bluetooth_manager, broadcast)
- Add forceRemoveBond() and restartBluetoothStack() for fixing zombie connections
- Add fixConnection() combining unbond + BT stack restart
- Add reconnectAllDevices() with staggered delays
- Add exportPairedDevices() for sharing device list
- Add Auto-Test and Auto-Exploit toggles for automation
- Add Test All / Exploit All batch operations
- Add debug logging system with in-app viewer (bug icon in Paired tab)
- Add Magisk module structure for privileged app installation
- Fix deprecated icon warnings (use AutoMirrored variants)
- Add gradle wrapper files

The app can now connect HFP audio profiles directly without manual Settings intervention on rooted devices.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# Build outputs
+*.apk
+*.zip
+WhisperPair-Magisk.zip
+
+# Platform tools (user should download)
+platform-tools/
